--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="card-white" id="introduction">
 
 			<h1>Hello, I'm Chichi</h1>
-			<img src="images/profile.jpg" class="img-circle" alt="Chichi">
+			<img src="images/Profile.jpg" class="img-circle" alt="Chichi">
 			<p>I love my dog!</p>
 			<a href="https://www.linkedin.com/in/ alexia-chen-64b872188/" target="_blank" class="btn-blue" > Here is my Linkedin.</a>
 		</div>
